--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -17,7 +17,7 @@ body { padding-top: 60px; }
 	}
 
 .container{
-	text-align:center;
+	text-align:justify;
 }
 
 
@@ -29,6 +29,7 @@ body { padding-top: 60px; }
 .navbar .nav > li > a {
 text-shadow:none;	
 }
+
 	
 
 
