--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
 		<div class="input-append">
 			<%# Puts the search box in the right hand side of the nav bar%>
 			<form class="navbar-search pull-right">
-			<%= form_tag("/events", :method => "get") do %>
+			<%= form_tag events_path, :method => 'get' do %>
   				<%= text_field_tag :search, params[:search] %>
   				 <button type="submit" class="btn btn-info">
    					 search <i class="icon-search"></i> 
