--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -9,7 +9,9 @@
 		<div class="span12">
 			<button class ="btn btn-inverse" id="go">Locate me!</button>
 			<br/><br/>
+			<div class="img-polaroid">
 			<div id="map"></div>
+			</div>
 		</div>
 	</div>
 </div>
