--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -9,8 +9,9 @@
     <th>Date</th>
     <th>Area</th>
     <th>Genre</th>
-    <th></th>
-    <th></th>
+    <th>location</th>
+    <th>Latitude</th>
+    <th>Longitude</th>
     <th></th>
   </tr>
 
@@ -22,6 +23,9 @@
     <td><%= event.date %></td>
     <td><%= event.area %></td>
     <td><%= event.genre %></td>
+    <td><%= event.location %></td>
+    <td><%= event.latitude %></td>
+    <td><%= event.longitude %></td>
   </tr>
 <% end %>
 </table>
@@ -29,5 +33,5 @@
 <br/>
 <br/>
 <br/>
-
+<div id="map"><%= gmaps4rails(@json) %></div>
 
