--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,10 +67,13 @@
       <% end %>
     <% end %>
     <%= yield %>
-    <hr>
-    <footer>
+    <div id="push"></div>
+    </div>
+
+    <hr/>
+<div id="footer">
       <p>&copy; Amy McCarthy 2012</p>
-    </footer>
+    </div>
   </div>
   <%= yield :scripts %>
 </body>
