--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,29 +1,32 @@
-<ul>
-<% for event in @event.nearbys(20) %>
-  <li><%= link_to event.address, event %> (<%= event.distance.round(2) %> miles)</li>
-<% end %>
-</ul<% title "Location" %>
 
-<p>
-  <strong>Address:</strong>
-  <%= @event.location %>
-</p>
-<p>
-  <strong>Latitude:</strong>
-  <%= @event.latitude %>
-</p>
-<p>
-  <strong>Longitude:</strong>
-  <%= @event.longitude %>
-</p>
+<html>
+<head>
+</head>
 
-<h3>Nearby Locations</h3>
-<ul>
-<% for event in @event.nearbys(10) %>
-  <li><%= link_to event.address, event %> (<%= event.distance.round(1) %> miles)</li>
-<% end %>
-</ul>
+<body>
+<div class="container-fluid">
+	<div class="row-fluid">
+		<div class="span12">
+			<button class ="btn btn-inverse" id="go">fuck me!</button>
+			<br/><br/>
+			
+			<div id="map"> <%= gmaps({
+        "map_options" => { "auto_zoom" => false, "zoom" => 15 },
+        "markers"     => { "data" => @json }
+      }) %> 
+</div>
+			</div>
+		</div>
+	</div>
+</div>
+</body>
 
-
-<%= link_to 'Edit', edit_event_path(@event) %> |
-<%= link_to 'Back', events_path %>
+<script type="text/javascript"
+src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<%= javascript_include_tag :all %>
+<%= stylesheet_link_tag :all %>
+ 
+ <script type="text/javascript src="http://code.jquery.com/jquery-1.7.1.js"></script>
+ <script src="gears_init.js"></script>
+<script src="geo.js"></script>
+</html>
