--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -9,20 +9,20 @@
 		<div class="span12">
 			<button class ="btn btn-inverse" id="go">Locate me!</button>
 			<br/><br/>
-			<div class="img-polaroid">
-			<div id="map"></div>
+			
+			<div id="map"><%= gmaps4rails(@json) %></div>
+</div>
 			</div>
 		</div>
 	</div>
 </div>
 </body>
 
-<script type="text/javascript"
-src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<%= javascript_include_tag "map" %>
-<%= stylesheet_link_tag "maps" %>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<%= javascript_include_tag :all %>
+<%= stylesheet_link_tag :all %>
  
- <script type="text/javascript src="http://code.jquery.com/jquery-1.7.1.js"></script>
+ <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.js"></script>
  <script src="gears_init.js"></script>
 <script src="geo.js"></script>
 </html>
