--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -2,11 +2,54 @@
 body { padding-top: 60px; }
 @import "bootstrap-responsive";
 
+#login{
+	color:white;
+}
 
+.listing{
+	clear:both;
+}
 
+.event_item{
+	background-color:white;
+	padding: 10px;
+	text-align:center;
+	float:left;
+	border-radius:15px;
+	-moz-border-radius: 15px;
+	border-style:solid;
+	border-width:2px;
+	border-color:#9D20AB;
+}
+
+/*---Map infowindows----*/
+#info{
+	width: 50px;
+}
+
+#description{
+	text-align:justify;
+}
+
+#box{
+	background-color:white;
+	     -webkit-border-radius: 4px;
+         -moz-border-radius: 4px;
+         border-radius: 4px;
+         width: 200px;
+         height: 50px;
+         line-height: 50px;
+         text-align: center;
+	}
+	
+	
 .navbar{
 	color:black;
 	text-shadow:none;
+}
+
+.search{
+	float:right;
 }
 
 /*---Fix the navigation at side of map---*/
@@ -16,6 +59,10 @@ body { padding-top: 60px; }
 #map label { 
   width: auto; display:inline; 
 } 
+
+.btn-group{
+	float:left;
+}
 
 
 /*taken from the bootstrap website*/
