--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -32,6 +32,9 @@
     <%= f.text_field :location %>
   </div>
   <div class="field">
+    <%= f.file_field :image %>
+  </div>
+  <div class="field">
     <%= f.label :genre %><br />
     <%= f.text_field :genre %>
   </div>
