--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,32 +1,39 @@
 
-<html>
-<head>
-</head>
+<div class=event_item>
 
-<body>
-<div class="container-fluid">
-	<div class="row-fluid">
-		<div class="span12">
-			<button class ="btn btn-inverse" id="go">fuck me!</button>
-			<br/><br/>
-			
-			<div id="map"> <%= gmaps({
-        "map_options" => { "auto_zoom" => false, "zoom" => 15 },
-        "markers"     => { "data" => @json }
-      }) %> 
-</div>
-			</div>
-		</div>
-	</div>
-</div>
-</body>
+<p>
+  <%= image_tag @event.image_url.to_s %>
 
-<script type="text/javascript"
-src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<%= javascript_include_tag :all %>
-<%= stylesheet_link_tag :all %>
+</p>
+
+<p>
+  <b><%= @event.title %></b>
+</p>
+
+<p id="description">
+  <%= @event.description %>
+</p>
+
+
+<p>
+  <%= @event.date %>
+</p>
+<p>
+  <%= @event.genre %>
+</p>
+
+<p>
+  <%= @event.area %>
+</p>
+
+
+<p>
+	</b><%= number_to_currency( @event.price, :unit => '&euro;') %>
  
- <script type="text/javascript src="http://code.jquery.com/jquery-1.7.1.js"></script>
- <script src="gears_init.js"></script>
-<script src="geo.js"></script>
-</html>
+</p>
+<% if current_user %>
+<%= link_to 'Edit', edit_event_path(@event) %> 
+ <% end %> 
+</div>
+
+
