--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,55 +10,45 @@
   <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-  
+  <![endif]--> 
 
   <%= stylesheet_link_tag    "application" %>
   <%= stylesheet_link_tag    "gmaps4rails" %>
+  <%= javascript_include_tag :default %>
   <%= javascript_include_tag "application" %>
+  
   <%= csrf_meta_tags %>
   <%= yield :head %>
 </head>
 <body>
   <div class="navbar navbar-fixed-top">
  	<div class="navbar navbar-inverse">
-    <div class="navbar-inner">
-      <div class="container">
-        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </a>
+    	<div class="navbar-inner">
+      		<div class="container">
+      		<%#ensures navbar is reposnive on resize of browser window%>
+       			<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          			<span class="icon-bar"></span>
+          			<span class="icon-bar"></span>
+          			<span class="icon-bar"></span>
+       			</a>
         
-        <%= link_to "What's happenin in my hood?", "/maps", :class => "brand" %>
-        <div class="nav-collapse">
-          <ul class="nav">
-            <li><a href="/maps"><i class="icon-home"></i> Home</a></li>
-            
-            <li><a href="/events">Events</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-          <%# input append ensures that the text box and the submit button are aligned%>
-		<div class="input-append">
-			<%# Puts the search box in the right hand side of the nav bar%>
-			<form class="navbar-search pull-right">
-			<%= form_tag events_path, :method => 'get' do %>
-  				<%= text_field_tag :search, params[:search] %>
-  				 <button type="submit" class="btn btn-info">
-   					 search <i class="icon-search"></i> 
-   				</button>
-			<% end %>
-			</form>
- 		</div>
-        </div>
-        
-        
-   
-        
-      </div>
-    </div>  
-</div>
-</div>
+        		<%= link_to "What's happenin in my hood?", "/maps", :class => "brand" %>
+        		<div class="nav-collapse">
+          			<ul class="nav">
+            			<li><a href="/maps"><i class="icon-home"></i> Home</a></li>
+            			<li><a href="/events">Events</a></li>
+            			<li><a href="/contact">Contact</a></li>
+            			<%#displays username and logout link if the user is logged in%>
+            			<% if current_user %>
+            				<li><%= link_to "Log Out", session_path("current"), method: "delete" %></li>
+            				<li><div id="login">Logged in as <%= current_user.name %></div></li>
+    					<% end %>
+          			</ul>
+        		</div>
+    		</div>
+    	</div>  
+	</div>
+  </div>
   <div class="container">
     <% flash.each do |name, msg| %>
       <%= content_tag :div, :class => "alert #{name == :error ? "alert-error" : "alert-success" }" do %>
@@ -68,12 +58,12 @@
     <% end %>
     <%= yield %>
     <div id="push"></div>
-    </div>
-
-    <hr/>
-<div id="footer">
+  </div>
+  <hr/>
+  
+  <div id="footer">
       <p>&copy; Amy McCarthy 2012</p>
-    </div>
+  </div>
   </div>
   <%= yield :scripts %>
 </body>
