--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -2,6 +2,43 @@
 body { padding-top: 60px; }
 @import "bootstrap-responsive";
 
+      html,
+      body {
+        height: 100%;
+        /* The html and body elements cannot have any padding or margin. */
+      }
+
+/*CSS to apply sticky footer at bottom of page - taken from http://twitter.github.com/bootstrap/examples/sticky-footer.html*/
+      /* Wrapper for page content to push down footer */
+      #wrap {
+        min-height: 100%;
+        height: auto !important;
+        height: 100%;
+        /* Negative indent footer by it's height */
+        margin: 0 auto -60px;
+      }
+
+      /* Set the fixed height of the footer here */
+      #push,
+      #footer {
+        height: 60px;
+      }
+      #footer {
+        background-color: #f5f5f5;
+         text-align:center;
+      }
+
+      /* Lastly, apply responsive CSS fixes as necessary */
+      @media (max-width: 767px) {
+        #footer {
+          margin-left: -20px;
+          margin-right: -20px;
+          padding-left: 20px;
+          padding-right: 20px;
+        }
+      }
+
+
 #login{
 	color:white;
 }
@@ -14,9 +51,19 @@ body { padding-top: 60px; }
 	background-color:white;
 	padding: 10px;
 	text-align:center;
-	float:left;
 	border-radius:15px;
 	-moz-border-radius: 15px;
+	border-style:solid;
+	border-width:2px;
+	border-color:#9D20AB;
+}
+
+#event_list{
+	background-color:white;
+	padding: 10px;
+	text-align:center;
+	border-radius:30px;
+	-moz-border-radius: 30px;
 	border-style:solid;
 	border-width:2px;
 	border-color:#9D20AB;
