--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,5 @@
 
+
   <% if current_user %>
 <div class="btn-group">
 <button class="btn btn-inverse">Admin</button>
@@ -37,7 +38,13 @@
  <br/>
   <br/>
    <br/>
+   
+       <%#= gmaps("markers" => {"data" => @json},   
+        "map_options" => {"detect_location" => true, 
+            "center_on_user" => true, "zoom" => 4 })%>
        
+
+ 
  
  <div class="listing">	
  
@@ -98,12 +105,41 @@
 <br/>
 <br/>
 <div id="map"><%# gmaps4rails(@json) %><%#gmaps(:map_options => {:detect_location => true, :center_on_user => true })%>
-<%= gmaps( :map_options => {  :detect_location => true},
+<%#= gmaps( :map_options => {  :detect_location => true},
            :markers     => { :data => @json } 
          ) %>
+         
+         <%= gmaps( :map_options => { :disableDefaultUI => true, :auto_adjust => true, :detect_location => true, :center_on_user => true },
+         :markers     => { :data => @json}
+         #:scripts     => :none  
+         ) %>
          </div>
+         
+
+  
 
 
+</body>
+ <% content_for :scripts do %>
+        <script type="text/javascript">
+    Gmaps.map.geolocationSuccess = function(){
+          if(Gmaps.map.callback){
+            var lng = Gmaps.map.userLocation.lng();
+            var lat = Gmaps.map.userLocation.lat();
+            Gmaps.map.addMarkers([{
+                "lng": lng,
+                "lat": lat,
+                "picture": "http://gmaps-samples.googlecode.com/svn/trunk/markers/pink/blank.png",
+                "width": "37",
+                "height": "34"
+            }]);
+          }
+
+        };
+
+        </script>
+        <% end %>
+         
 <%= javascript_include_tag :all %>
 <%= stylesheet_link_tag :all %>
 
