--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,24 +1,6 @@
 
 
-  <% if current_user %>
-<div class="btn-group">
-<button class="btn btn-inverse">Admin</button>
-  <button class="btn btn-inverse dropdown-toggle" data-toggle="dropdown"> 
-    <%#adds dropdown arrow%>
-    <span class="caret"></span>
-  </button>
-  
-  
-  <ul class="dropdown-menu">
-    <li>
-    	<a href="events/new">Add new event</a>
-  	</li>
-  	<li>
-  		<a href="users/new">create new user</a>
-  	</li>
-  </ul>
-</div>
- <% end %>		
+ 
 
 	<div class="search">	
 	<%# input append ensures that the text box and the submit button are aligned%>
@@ -27,8 +9,8 @@
 			<form class="navbar-search pull-right">
 			<%= form_tag events_path, :method => 'get' do %>
   				<%= text_field_tag :search, params[:search] %>
-  				 <button type="submit" class="btn btn-info">
-   					 search <i class="icon-search"></i> 
+  				 <button type="submit" class="btn btn-inverse">
+   					 search <i class="icon-search icon-white"></i> 
    				</button>
 			<% end %>
 			</form>
@@ -39,12 +21,7 @@
   <br/>
    <br/>
    
-       <%#= gmaps("markers" => {"data" => @json},   
-        "map_options" => {"detect_location" => true, 
-            "center_on_user" => true, "zoom" => 4 })%>
-       
-
- 
+    
  
  <div class="listing">	
  
@@ -52,11 +29,14 @@
  <table class="table table-hover">
   <thead>
   <tr>
+    <th></th>
     <th>Title</th>
-    <th>Description</th>
-    <th>Date</th>
-    <th>Genre</th>
-    <th>Location</th>
+    <%# Hides these elements on small screens%>
+    <th class="hidden-phone">Description</th>
+    <th class="hidden-phone">Date</th>
+    <th class="hidden-phone">Price</th>
+    <th class="hidden-phone">Genre</th>
+    <th class="hidden-phone">Location</th>
   </tr>
   </thead>
 <tbody>
@@ -64,17 +44,20 @@
 <%@events.each do |event| %>
 
 <tr>
-	<td><%= image_tag event.image_url.to_s %></td>
+	<td><%= link_to (image_tag (event.image_url.to_s), :class =>"img-rounded"), event %></td>
     <td><%= link_to event.title, event %></td>
-    <td><%= event.description %></td>
-    <td><%= event.date %></td>
-    <td><%= event.genre %></td>  
-    <td><%= event.location %></td>
+    <td class="hidden-phone"><%= event.description %></td>
+    <td class="hidden-phone"><%= event.date %></td>
+    <td class="hidden-phone"><%= number_to_currency( event.price, :unit => '&euro;') %></td>
+    <td class="hidden-phone"><%= event.genre %></td>  
+    <td class="hidden-phone"><%= event.location %></td>
+
+
     
 
     <% if current_user %>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-    	<td><%= link_to 'Destroy', event, confirm: 'Are you sure?', method: :delete %></td>
+        <td class="hidden-phone"><%= button_to 'Edit', edit_event_path(event), :method => :get, :class =>"btn btn-inverse"%>
+    	<%= button_to 'Delete', event, :class => "btn btn-inverse", confirm: 'Are you sure?', method: :delete %></td>
     <% end %>  
 
   </tr>
@@ -122,10 +105,13 @@
 </body>
  <% content_for :scripts do %>
         <script type="text/javascript">
+        var lat;
+    	var lng;
+        
     Gmaps.map.geolocationSuccess = function(){
           if(Gmaps.map.callback){
-            var lng = Gmaps.map.userLocation.lng();
-            var lat = Gmaps.map.userLocation.lat();
+            lng = Gmaps.map.userLocation.lng();
+            lat = Gmaps.map.userLocation.lat();
             Gmaps.map.addMarkers([{
                 "lng": lng,
                 "lat": lat,
@@ -133,13 +119,40 @@
                 "width": "37",
                 "height": "34"
             }]);
+       
+        $.ajax({
+                type: 'POST',
+                url: 'events/index',
+                dataType: 'json',
+                data: "latitude=" + lat + "&longitude=" + lng,          
+              });
           }
-
         };
+        
+        //$.post("index.html.erb");
+        
+       
+ 		//$.ajax({
+		//url: '/events',
+        //type: 'POST',
+        //dataType: 'json',
+        //data: "latitude=" + lat + "&longitude=" + lng,
+      //    success: function(data) {
+      //      alert("Successful");
+      //    },
+       //   failure: function() {
+       //     alert("Unsuccessful");
+       //   }
+       //cache: true,
+       //success: function (data) {}
+   //  });
+//}
+                 
+	     
 
         </script>
         <% end %>
          
-<%= javascript_include_tag :all %>
-<%= stylesheet_link_tag :all %>
+<%#= javascript_include_tag :all %>
+<%#= stylesheet_link_tag :all %>
 
