--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -20,11 +20,9 @@
 </div>
 </body>
 
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<%= javascript_include_tag :all %>
-<%= stylesheet_link_tag :all %>
+
+<%#= javascript_include_tag :all %>
+<%#= stylesheet_link_tag :all %>
  
  <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.js"></script>
- <script src="gears_init.js"></script>
-<script src="geo.js"></script>
 </html>
